# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_van_der_pol_kernel_inner)
add_subdirectory(02_van_der_pol_kernel_outer)
add_subdirectory(03_van_der_pol_kernel)

