# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_van_der_pol_kernel_inner)
add_subdirectory(02_van_der_pol_kernel_outer)
add_subdirectory(03_van_der_pol_kernel)
add_subdirectory(04_car_on_the_hill_kernel)
add_subdirectory(05_damien)
add_subdirectory(06_rayleigh_kernel)
add_subdirectory(07_piston_kernel)
add_subdirectory(08_piston_kernel_gradual)
add_subdirectory(09_kernel_car)

