# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_test)
add_subdirectory(02_test)
add_subdirectory(03_map_generator)
add_subdirectory(04_vtk_generator)

add_subdirectory(05_trajectory_PPL)
add_subdirectory(06_eulerian_PPL)
add_subdirectory(07_trajectory_bwd_PPL)