# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_test)
add_subdirectory(02_lorenz_invariant)
add_subdirectory(03_dubins)
add_subdirectory(04_van_der_pol)
