# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_visibility)
add_subdirectory(02_van_der_pol_video)
add_subdirectory(03_flotteur)
add_subdirectory(04_flotteur_kernel)