# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(test_monte_carlo)
add_subdirectory(test_dataset)
add_subdirectory(test_fromveur)
add_subdirectory(seabot_trajectory)

