# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_van_der_pol_integration)
add_subdirectory(02_uniform_integration_inner)
add_subdirectory(03_van_der_pol_integration_with_inner)
add_subdirectory(04_sinusoidal_integration)
add_subdirectory(05_sinusoidal2_integration)
add_subdirectory(06_full_cones_integration)
add_subdirectory(07_oscillateur_integration)
add_subdirectory(08_collins_integration)
add_subdirectory(09_car_on_the_hill_with_inner)
