# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_van_der_pol_integration_3D)
add_subdirectory(02_van_der_pol_integration_with_inner_3D)
add_subdirectory(03_dubins)
add_subdirectory(04_wrapping)
add_subdirectory(05_drifter)


