# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_van_der_pol_invariant)
add_subdirectory(02_van_der_pol_positive_invariant)
add_subdirectory(03_van_der_pol_invariant_inner)
add_subdirectory(04_van_der_pol_invariant_cycle)
add_subdirectory(05_zang_invariant)

add_subdirectory(06_circle_invariant)
add_subdirectory(07_circle2_invariant)
add_subdirectory(08_buckling_column_invariant)
add_subdirectory(09_balancing_invariant)
add_subdirectory(10_circle3_invariant)
add_subdirectory(11_rayleigh_invariant)

add_subdirectory(12_van_der_pol_invariant_cycle_separator)

add_subdirectory(13_van_der_pol_invariant_bracketing)

add_subdirectory(14_cordeliere_invariant)
add_subdirectory(15_dipole_invariant)
add_subdirectory(16_linear_system)
add_subdirectory(17_non_linear_system)

