# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_van_der_pol_invariant)
add_subdirectory(02_van_der_pol_positive_invariant)
add_subdirectory(03_van_der_pol_invariant_inner)
add_subdirectory(04_van_der_pol_invariant_cycle)
add_subdirectory(05_zang_invariant)

add_subdirectory(06_circle_invariant)
add_subdirectory(07_circle2_invariant)
add_subdirectory(08_buckling_column_invariant)
add_subdirectory(09_balancing_invariant)
add_subdirectory(10_circle3_invariant)
add_subdirectory(11_rayleigh_invariant)

add_subdirectory(12_van_der_pol_invariant_cycle_separator)

add_subdirectory(13_van_der_pol_invariant_bracketing)

add_subdirectory(14_cordeliere_invariant)
add_subdirectory(15_dipole_invariant)
add_subdirectory(16_linear_system)
add_subdirectory(17_non_linear_system)

add_subdirectory(18_piston_regulation)

add_subdirectory(19_pendulum)

add_subdirectory(20_piston_uncertainty)

add_subdirectory(21_van_der_pol_steps)
add_subdirectory(22_van_der_pol_invariant_bracketing_stats)

add_subdirectory(23_dipole)

add_subdirectory(24_piston_stability)
add_subdirectory(25_piston_uncertainty2)
add_subdirectory(26_piston_stability2)

add_subdirectory(27_van_der_pol_positive_invariant_video)

add_subdirectory(28_kleene_ex1)
add_subdirectory(28_kleene_ex2)
add_subdirectory(28_kleene_ex3)