# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_lorenz_invariant)
add_subdirectory(02_hindmarsh–rose)
add_subdirectory(03_rabinovich–fabrikant)
add_subdirectory(04_rossler)
add_subdirectory(05_thomas)
add_subdirectory(06_corkscrew)


