# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_lorenz_invariant)
add_subdirectory(02_hindmarsh_rose)
add_subdirectory(03_rabinovich_fabrikant)
add_subdirectory(04_rossler)
add_subdirectory(05_thomas)
add_subdirectory(06_corkscrew)
add_subdirectory(07_torus)
add_subdirectory(08_piston)

